libswscale: Memory leak in gst_video_frame_map

https://bugzilla.gnome.org/show_bug.cgi?id=784741